		in another module of mine. Then I checked all my modules (including some not intended for
		publication - Local::*) and found about 28 offenders, with some using it inn multiple files.
		The original idea came from adopting what Tom Christiansen calls his 'Standard Preamble':
		http://www.perl.com/pub/2012/04/perlunicook-standard-preamble.html
		All tests still work after removing that line.

1.26  Sun Apr 12 13:37:00 2015
	- Fix bug in string2hashref(), which failed on some strings, such as {a => 'b, c'}.
		string2hashref() is called by read_tree().
		Escaped chars are still not handled.
	- Add t/string2hash.t to test new code.

1.25  Sun Mar 22 11:42:00 2015
	- I've deleted the undocumented sub _dump_quote(), which butchered Unicode characters
		when it tried to convert ASCII control characters into printable strings (on the assumption
		all data is ASCII). Thanx to Dr. Petra Steiner (Germany) for discussion and some testing.
		I hope no-one was relying on this sub in output redirected to disk files, or otherwise
		saved for later comparisons.
		Methods which used to call _dump_quote() now just output the node's name by calling
		quote_name(), which is discussed next. Undefined names are output as the string 'undef'.
	- Add method quote_name(), which simply returns its input string surrounded by single-quotes.
	- Add method decode_lol(). This converts the output of tree_to_lol() and tree_to_simple_lol()
		into something which is easy to read. See scripts/read.tree.pl for sample usage.
	- Reorder a couple of methods called tree_*(), so that they are in alphabetical order.
	- Expand the docs for methods tree_to_*(), re undefined node names.
	- Add scripts/write.tree.pl, which creates the test input file t/tree.utf8.attributes.txt.
		Note: This latter file is now much more complex that in previous versions.
	- Add scripts/read.tree.pl, and it's output file scripts/read.tree.log. This program
		demonstrates the output produced by various methods.