@@ -15,6 +15,7 @@ publication - Local::*) and found about 28 offenders, with some using it inn mul
 The original idea came from adopting what Tom Christiansen calls his 'Standard Preamble':
 http://www.perl.com/pub/2012/04/perlunicook-standard-preamble.html
 All tests still work after removing that line.
+- Remove Build.PL. Ship only Makefile.PL.
 EOT
 
 [V 1.26]
